# ForecastGA

./: .gitignore  1.1  README.md  ideation.txt  prospector.out  pyproject.toml  requirements-gpu.txt  requirements.txt  setup.py  test.py
data/: ga_sessions.csv
not_used/: init.py
not_used/TS/: Exogenous.py  Intermittent_Models.py  Keras_Models.py  MissingData.py  Options.py  Perf.py  Plots.py  PredictionIntervals.py  Scikit_Models.py  SignalDecomposition.py  SignalDecomposition_AR.py  SignalDecomposition_Cycle.py  SignalDecomposition_Quant.py  SignalDecomposition_Trend.py  SignalHierarchy.py  Signal_Grouping.py  Signal_Transformation.py  Time.py  TimeSeriesModel.py  TimeSeries_Cutting.py  Utils.py
src/: 1.1  Google_Analytics_Foreasting.ipynb  __init__.py  identity.json
src/forecastga/: __init__.py  auto.py  ensembles.py  pyaf.py
src/forecastga/ga/: __init__.py  blueprint.py  columns.py  segments.py
src/forecastga/ga/auth/: __init__.py  credentials.py  oauth.py
src/forecastga/ga/utils/: __init__.py  functional.py  server.py
src/forecastga/googleanalytics/: __init__.py  account.py  blueprint.py  columns.py  errors.py  query.py
src/forecastga/googleanalytics/auth/: __init__.py  credentials.py  keyring.py  oauth.py
src/forecastga/googleanalytics/commands/: __init__.py  authorize.py  (+4 more)
src/forecastga/helpers/: colab.py  data.py  ga_data.py  helpers.py  holidays.py  logging.py  ssa.py
src/forecastga/models/: __init__.py  arima.py  base.py  gluonts.py  hwaas.py  hwams.py  nbeats.py  prophet-boxcox.py  prophet.py  prophet_boxcox.py  pyaf.py  sarima.py  sarimax.py  tats.py  tbat.py  tbatp1.py  tbats1.py  tbats2.py  template.py
src/models/: arima.py  hwaas.py  hwams.py  prophet.py  pyaf.py  sarima.py  tats.py  tbats1.py
tests/googleanalytics/: meta.py  report.py
(+5 files in other folders)
