[tool.poetry]
name = "ForecastGA"
version = "0.1.0"
description = "A Python tool to forecast GA data using several popular timeseries models"
authors = ["JR Oakes <jroakes@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jroakes/ForecastGA"
repository = "https://github.com/jroakes/ForecastGA"
keywords = ["google analytics", "forecasting", "python"]


[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.0"
pmdarima = "^1.8.0"
gluonts = "^0.6.4"
statsmodels = "^0.12.1"
numpy = "1.19.3"
fbprophet = "^0.7.1"
tbats = "^1.1.0"
tsfresh = "^0.17.0"
lightgbm = "^3.1.1"
pyaf = "^2.0.1"
oauth2client = "^4.1.3"
google-api-python-client = "^1.12.8"
python-dateutil = "^2.8.1"
addressable = "^1.4.2"
inspect-it = "^0.3.2"
Werkzeug = "^1.0.1"
keyring = "5.4.0"
click = "^7.1.2"
PyYAML = "^5.3.1"
prettytable = "^2.0.0"
colorama = "^0.4.4"
snakify = "^1.1.1"
nbeats-pytorch = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
prospector = {extras = ["with_pyroma"], version = "^1.3.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
